# vbl-aquarium

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: autoformat-and-lint.yml  build-docs.yml  build-models.yml  build.yml  deploy-docs.yml  release.yml  static-analysis.yml
docs/: index.md
docs/api/: index.md  unity_models.md
docs/development/: index.md
docs/development/source_code_documentation/: index.md
logging/: log-schema.json
models/csharp/: DockModels.cs  EphysLinkModels.cs  GenericModels.cs  LoggingModels.cs  PinpointModels.cs  ProxyModels.cs  UrchinModels.cs  dock_models.cs  ephys_link_models.cs  generic_models.cs  logging_models.cs  pinpoint_models.cs  urchin_models.cs
models/csharp/dock/: BucketModel.cs  LoadModel.cs  SaveManagerModel.cs  SaveModel.cs
models/csharp/ephys_link/: AngularResponse.cs  BooleanStateResponse.cs  CanWriteRequest.cs  DriveToDepthRequest.cs  DriveToDepthResponse.cs  GetManipulatorsResponse.cs  GotoPositionRequest.cs  InsideBrainRequest.cs  PositionalResponse.cs  ShankCountResponse.cs
models/csharp/generic/: BoolData.cs  BoolList.cs  ColorData.cs  ColorList.cs  FloatData.cs  FloatList.cs  IDData.cs  IDList.cs  IDListBoolData.cs  IDListBoolList.cs  IDListColorData.cs  IDListColorList.cs  IDListFloatData.cs  IDListFloatList.cs  IDListIntData.cs  IDListIntList.cs  IDListStringData.cs  IDListStringList.cs  IDListVector3Data.cs  IDListVector3List.cs  IntData.cs  IntList.cs  StringData.cs  StringList.cs  VBLBaseModel.cs  Vector3Data.cs  Vector3List.cs
scripts/: gen_ref_pages.py
socket-io/: id-schema.json
src/vbl_aquarium/: __init__.py  __main__.py  build.py  generate_cs.py  models_generic.py  models_pinpoint.py  models_unity.py  models_urchin.py  old_build.py  old_generate_cs.py  unity.py
src/vbl_json_schema/: build.py  generate_cs.py  models.py  models_base.py  models_generic.py  models_logging.py  models_urchin.py  urchin.py
urchin/: camera-schema.json  neuron-schema.json
urchin/data/: img-data-schema.json  img-meta-schema.json  img-request-schema.json
(+169 files in other folders)
